Update lxd build shell and lxd yaml file